--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "sequelize": "6.13.0",
+    "sequelize-cli": "6.3.0"
   }
 }
