--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "6.13.0",
     "sequelize-cli": "6.3.0"
   }
